// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Embed> should render component with advanced props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <object
        class="embed embed--landscape"
        data="https://cdn.mesalva.com/uploads/regulamentos/regulamento-resgate-de-livros-e-apostilas-v14.pdf"
        data-testid="embed"
        type="application/pdf"
      >
        <p
          class="text text--size-md"
          data-testid="text"
        >
          Se você não consegue visualizar este documento, clique no botão abaixo e faça download!
        </p>
        <a
          class="link btn btn--naked btn--size-sm link--primary"
          data-testid="button"
          href="https://cdn.mesalva.com/uploads/regulamentos/regulamento-resgate-de-livros-e-apostilas-v14.pdf"
          target="_blank"
          type="button"
        >
           
          <span
            class="btn__content"
          >
            Download
          </span>
        </a>
      </object>
    </div>
  </body>,
  "container": <div>
    <object
      class="embed embed--landscape"
      data="https://cdn.mesalva.com/uploads/regulamentos/regulamento-resgate-de-livros-e-apostilas-v14.pdf"
      data-testid="embed"
      type="application/pdf"
    >
      <p
        class="text text--size-md"
        data-testid="text"
      >
        Se você não consegue visualizar este documento, clique no botão abaixo e faça download!
      </p>
      <a
        class="link btn btn--naked btn--size-sm link--primary"
        data-testid="button"
        href="https://cdn.mesalva.com/uploads/regulamentos/regulamento-resgate-de-livros-e-apostilas-v14.pdf"
        target="_blank"
        type="button"
      >
         
        <span
          class="btn__content"
        >
          Download
        </span>
      </a>
    </object>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Embed> should render component with basic props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <object
        class="embed embed--default"
        data="https://cdn.mesalva.com/uploads/regulamentos/regulamento-resgate-de-livros-e-apostilas-v14.pdf"
        data-testid="embed"
        type="application/pdf"
      >
        <p
          class="text text--size-md"
          data-testid="text"
        >
          Se você não consegue visualizar este documento, clique no botão abaixo e faça download!
        </p>
        <a
          class="link btn btn--primary btn--size-sm link--primary"
          data-testid="button"
          href="https://cdn.mesalva.com/uploads/regulamentos/regulamento-resgate-de-livros-e-apostilas-v14.pdf"
          target="_blank"
          type="button"
        >
           
          <span
            class="btn__content"
          >
            Baixar arquivo
          </span>
        </a>
      </object>
    </div>
  </body>,
  "container": <div>
    <object
      class="embed embed--default"
      data="https://cdn.mesalva.com/uploads/regulamentos/regulamento-resgate-de-livros-e-apostilas-v14.pdf"
      data-testid="embed"
      type="application/pdf"
    >
      <p
        class="text text--size-md"
        data-testid="text"
      >
        Se você não consegue visualizar este documento, clique no botão abaixo e faça download!
      </p>
      <a
        class="link btn btn--primary btn--size-sm link--primary"
        data-testid="button"
        href="https://cdn.mesalva.com/uploads/regulamentos/regulamento-resgate-de-livros-e-apostilas-v14.pdf"
        target="_blank"
        type="button"
      >
         
        <span
          class="btn__content"
        >
          Baixar arquivo
        </span>
      </a>
    </object>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
